# reggatad

./: .gitignore  CMakeLists.txt  README  README.md  gen_eclipse_project.sh  reggatad.conf
main/: main.cpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: application.cpp  application.h  client_connection.cpp  client_connection.h  cmd.cpp  cmd.h  cmd_add_tags.cpp  cmd_add_tags.h  cmd_open_repo.cpp  cmd_open_repo.h  cmd_proc.cpp  cmd_proc.h  cmd_remove_tags.cpp  cmd_remove_tags.h  cmd_repo.cpp  cmd_repo.h  cmds.h  compare_and_inc_uint64.h  database.cpp  database.h  db_key.cpp  db_key.h  file_info.h  first_delim_prefix_transform.h  json_map.h  main.cpp  processor.cpp  processor.h  reggata_exceptions.h  repo.cpp  repo.h  repo_info.h  rocksdb_merge_operator.h  safe_queue.h  service.cpp  service.h  status_code.cpp  status_code.h
src/cmd/: cmd.cpp  cmd.h  cmd_add_tags.cpp  cmd_add_tags.h  cmd_close_repo.cpp  cmd_close_repo.h  cmd_get_file_info.cpp  cmd_get_file_info.h  cmd_get_repos_info.cpp  cmd_get_repos_info.h  cmd_open_repo.cpp  cmd_open_repo.h  cmd_proc.cpp  cmd_proc.h  cmd_remove_tags.cpp  cmd_remove_tags.h  cmd_repo.cpp  cmd_repo.h  cmd_search.cpp  cmd_search.h
src/lang/: node.h  oper_and.cpp  oper_and.h  oper_not.cpp  oper_not.h  oper_or.cpp  oper_or.h  tag.cpp  tag.h
src/main/: ClientConnection.cpp  ClientConnection.h  Repo.cpp  Repo.h  Service.cpp  Service.h  application.h  client_connection.cpp  client_connection.h  cmd.h  cmd_add_tags.cpp  cmd_remove_tags.cpp  cmd_remove_tags.h  main.cpp  processor.cpp  processor.h  reggata_exceptions.h  repo.cpp  repo.h  service.cpp  service.h  service_exceptions.h
src/main/parser/: parse.cc  parser.g
src/main/scanner/: Scanner.h  Scanner.hh
src/parser/: Parser.h  Parser.ih  Parserbase.h  generate_parser  parse.cc  parser.g  parser.h  parser.ih  parserbase.h
src/scanner/: Scanner.ih  Scannerbase.h  generate_scanner  lex.cc  scanner.g  scanner.h  scanner.ih  scannerbase.h
src/test/: test.cpp
test/: README.md  add_tags_test.cpp  bad_cmd_test.cpp  boost_test.cpp  client.cpp  client.h  common.cpp  common.h  db_key_test.cpp  first_delim_prefix_transform_test.cpp  g40_esj_test.cpp  nlohmann_json_test.cpp  open_close_repo_test.cpp  ping_client_test.cpp  remove_tags_test.cpp  repo_test.cpp  rocksdb_merge_operator.h  rocksdb_test.cpp  scanner_parser_test.cpp  search_test.cpp  test.cpp  testing.cpp  testing.h
test_data/: .gitignore  repo.meta.json
test_data/repo1/: .gitignore
